# HP-Socket-for-macOS

./: .gitignore  HP-Socket.pro  HPTypeDef.h  HttpHelper.h  LICENSE  README.md  SSLAgent.cpp  SSLAgent.h  SSLClient.cpp  SSLClient.h  SSLHelper.cpp  SSLServer.cpp  SSLServer.h  SocketHelper.cpp  SocketHelper.h  TcpAgent.cpp  TcpAgent.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  TestCode.txt  UdpClient.cpp  UdpClient.h  UdpServer.cpp  UdpServer.h  helper.cpp  helper.h  main.cpp
.github/workflows/: main.yml
common/: BufferPool.cpp  BufferPool.h  BufferPtr.h  CBufferPool.cpp  CBufferPool.h  CNodePoolT.cpp  CNodePoolT.h  CriSec.h  Event.cpp  Event.h  FuncHelper.cpp  FuncHelper.h  GeneralHelper.h  GlobalDef.h  GlobalErrno.h  IODispatcher.cpp  IODispatcher.h  MessagePipe.h  PollHelper.cpp  PrivateHeap.h  RWLock.cpp  RWLock.h  RingBuffer.h  STLHelper.h  Semaphore.h  StringT.h  SysHelper.cpp  SysHelper.h  TBuffer.cpp  TBuffer.h  TItem.cpp  TItem.h  TItemList.cpp  TItemList.h  TItemListExT.cpp  TItemListExT.h  TItemPtr.cpp  TItemPtr.h  TSimpleList.cpp  TSimpleList.h  (+3 more)
common/crypto/: Crypto.h
common/http/: Readme.txt  http_parser.cpp  http_parser.h
hpsocket/: .gitignore  CMakeLists.txt  README.md  main.cpp  xmake.lua
hpsocket/4C/: HPSocket4C-SSL.cpp  HPSocket4C-SSL.h  HPSocket4C.cpp  HPSocket4C.h
hpsocket/qt-hpsocket/: hpsocket.pro  qt-hpsocket.pro
hpsocket/qt-hpsocket/EchoDemo/EchoClient/: EchoClient.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  tcpclientlistenerimpl.cpp  tcpclientlistenerimpl.h
hpsocket/qt-hpsocket/EchoDemo/EchoServer/: EchoServer.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  tcpserverlistenerimpl.cpp  tcpserverlistenerimpl.h
hpsocket/qt-hpsocket/includes/: GlobalDef.h  HPTypeDef.h
hpsocket/qt-hpsocket/qt-lib-demo/: lib-demo.pro  main.cpp
hpsocket/qt-hpsocket/qt-lib-demo/includes/: HPTypeDef.h
hpsocket/src/: ArqHelper.cpp  ArqHelper.h  HPSocket-SSL.cpp  HPSocket-SSL.h  HPSocket.cpp  HPSocket.h  HPSocket4C-SSL.cpp  HPSocket4C-SSL.h  HPSocket4C.cpp  HPSocket4C.h  HPThreadPool.cpp  HPThreadPool.h  HPTypeDef.h  HttpAgent.cpp  HttpAgent.h  HttpClient.cpp  HttpClient.h  HttpHelper.cpp  HttpHelper.h  HttpServer.cpp  HttpServer.h  MiscHelper.h.bak  SSLAgent.cpp  SSLAgent.h  SSLClient.cpp  SSLClient.h  SSLHelper.cpp  SSLHelper.h  SSLHelper.h.bak  SSLServer.cpp  SSLServer.h  SocketHelper.cpp  SocketHelper.h  SocketInterface.h  TcpAgent.cpp  TcpAgent.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  (+13 more)
hpsocket/src/common/: BufferPool.cpp  BufferPool.h  BufferPtr.h  CriSec.h  Event.cpp  Event.h  FileHelper.cpp  FileHelper.h  FuncHelper.cpp  FuncHelper.h  GeneralHelper.h  GlobalDef.h  GlobalErrno.h  IODispatcher.cpp  IODispatcher.h  MessagePipe.cpp  PollHelper.cpp  PollHelper.h  PrivateHeap.h  RWLock.cpp  RWLock.h  RingBuffer.h  STLHelper.h  Semaphore.h  SignalHandler.h  Singleton.h  StringT.h  SysHelper.cpp  SysHelper.h  Thread.cpp  Thread.h  TimerPipe.cpp
hpsocket/src/common/crypto/: Crypto.cpp
hpsocket/src/common/http/: Readme.txt  http_parser.c  http_parser.h
hpsocket/src/common/kcp/: Readme.txt  ikcp.c  ikcp.h
hpsocket/ssl-cert/: ca.crt  ca.key  ca.pem  ca2.crt  ca2.key  ca2.pem  client.cer  client.crt  client.csr  client.key  client.pem  client2.cer  client2.crt  client2.csr  client2.key  client2.pem  server.cer  server.crt  server.csr  server.key  server.pem  server2.cer  server2.crt  server2.csr  server2.key  server2.pem
hpsocket/test/: helper.cpp  helper.h  main.cpp  test1.cpp
hpsocket/test/client/: test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp  testA.cpp  testB.cpp
hpsocket/test/server/: test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp
